--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "minimatch": "^3.0.0",
     "num2fraction": "^1.2.2",
     "on-headers": "^1.0.1",
+    "ordered-esprima-props": "^1.1.0",
     "parseurl": "^1.3.0",
     "rcloader": "^0.1.4",
     "serve-static": "^1.10.0",
